--- a/caveascent.html
+++ b/caveascent.html
@@ -1100,6 +1100,8 @@ canvas{
 
 <!-- Add content below the cart here -->
 
+Instructions: Use the arrow keys to move. Collision not currently working.
+
 
 
 
